--- a/blackwire/templates/support.html
+++ b/blackwire/templates/support.html
@@ -7,8 +7,8 @@
   <meta name="description" content="BlackWire provides immediate support and reporting guidance for victims of sextortion and extortion attempts." />
   
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="/static/favicon.svg" />
-  <link rel="alternate icon" type="image/png" href="/static/favicon.svg" />
+  <link rel="icon" type="image/svg+xml" href="{{ url_for('blackwire.static', filename='favicon.svg') }}" />
+  <link rel="alternate icon" type="image/png" href="{{ url_for('blackwire.static', filename='favicon.svg') }}" />
 
   <!-- Full Style Block Inserted -->
   <style>
