--- a/shadowstack/templates/shadowstack_dashboard.html
+++ b/shadowstack/templates/shadowstack_dashboard.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ShadowStack - Dashboard</title>
-    <link rel="icon" type="image/svg+xml" href="/shadowstack/static/images/favicon.svg" />
-    <link rel="alternate icon" href="/shadowstack/static/images/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="{{ url_for('shadowstack.static', filename='images/favicon.svg') }}" />
+    <link rel="alternate icon" href="{{ url_for('shadowstack.static', filename='images/favicon.svg') }}" />
     <link rel="stylesheet" href="/shadowstack/static/css/style.css">
     <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
